[gd_scene load_steps=6 format=3 uid="uid://cskr3w1b4mem7"]

[ext_resource type="Material" uid="uid://dxj6kwcuiwko6" path="res://shaders/pixel_smooth.tres" id="1_034bb"]
[ext_resource type="Script" path="res://ui/tower_slot.gd" id="1_trtx2"]
[ext_resource type="Texture2D" uid="uid://5g78k7ox82g1" path="res://assets/towers/TowerFire.png" id="3_8klqb"]
[ext_resource type="Texture2D" uid="uid://cjhktdlj6lbwx" path="res://assets/ui/AuraNeutralGUI.png" id="4_pbg3h"]

[sub_resource type="CanvasTexture" id="CanvasTexture_rlye1"]

[node name="TowerSlot" type="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_trtx2")

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.392157)
layout_mode = 2
texture = SubResource("CanvasTexture_rlye1")

[node name="Icon" type="TextureRect" parent="."]
material = ExtResource("1_034bb")
layout_mode = 2
texture = ExtResource("3_8klqb")

[node name="AuraGui" type="TextureRect" parent="Icon"]
visible = false
material = ExtResource("1_034bb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_pbg3h")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
